--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,32 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    background-color: #f5f5f5;
+}
+
+h1 {
+    text-align: center;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+.center {
+    text-align: center;
+}
+
+p {
+    text-align: justify;
+}
+
+.main-container {
+    background-color: black;
+    width: 460px;
+    color: blue;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.copy {
+    text-align: center;
+    padding: 10px;
 }
