--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #f5f5f5;
-}
-
-h1 {
-    text-align: center;
-    font-size: 16px;
-    text-decoration: none;
 }
 
 .center {
@@ -17,6 +13,7 @@ h1 {
 
 p {
     text-align: justify;
+    font-size: 14px;
 }
 
 .main-container {
@@ -27,7 +24,9 @@ p {
     margin-left: auto;
     margin-right: auto;
 }
+
 .copy {
     text-align: center;
     padding: 10px;
+    font-size: 12px;
 }
